--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <!-- link css -->
     <link href="assets/css/style.css" rel="stylesheet"/>
-    <link href="assets/css/form.css" rel="stylesheet"/>
+    <link href="assets/css/form.min.css" rel="stylesheet"/>
     <link href="assets/swal/sweetalert2.min.css" rel="stylesheet"/>
 
     <!-- unicons -->
@@ -148,11 +148,11 @@
     </div>
 </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-<script src="assets/js/app.js"></script>
+<script src="assets/js/app.min.js"></script>
 <script src="assets/swal/sweetalert2.min.js"></script>
 <script>
     document.addEventListener("DOMContentLoaded", () => {
-        let token = sessionStorage.getItem('TOKEN');
+        let token = localStorage.getItem('TOKEN');
         if (token) {
             window.location.href = document.URL.substring(0, document.URL.lastIndexOf('/')) + '/index.html';
         }
@@ -185,7 +185,7 @@
                     text: 'Please check your registered email to activate your account. ',
                     footer: 'Click <a href="#">here</a> to login'
                 })
-                //sessionStorage.setItem('TOKEN', data['TOKEN']);
+                //localStorage.setItem('TOKEN', data['TOKEN']);
                 //window.location.href = document.URL.substring(0,document.URL.lastIndexOf('/')) + '/login.html';
             } else if (data['RESULT'].contains('used')) {
                 Swal.fire({
