--- a/booking.html
+++ b/booking.html
@@ -358,6 +358,13 @@
                     <h3 class="title">Passenger(s)</h3>
                     <div id="passenger-list">
                     </div>
+                    <div style="overflow: auto; text-align: center">
+                        <button class="btn btn-primary" onclick="assignSeat()"
+                                style="padding: 5px 10px 5px 10px; width: 60%">
+                            Assign
+                            Seat
+                        </button>
+                    </div>
 
                 </div>
                 <div class="block locate-block">
