--- a/booking.html
+++ b/booking.html
@@ -490,25 +490,25 @@
                                type="date"
                         />
                     </div>
-                    <div class="gender-main">
-                        <label class="bt" for="gender">Gender</label>
-                        <div class="gender" id="gender">
-                            <div class="gender-type">
-                                <input checked id="male" name="gender" type="radio" value="m"/>
-                                <label for="male">
-                                    <i class="uil uil-mars"></i>
-                                    <p>male</p>
-                                </label>
-                            </div>
-                            <div class="gender-type">
-                                <input id="female" name="gender" type="radio" value="f"/>
-                                <label for="female">
-                                    <i class="uil uil-venus"></i>
-                                    <p>Female</p>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
+                    <!--                    <div class="gender-main">-->
+                    <!--                        <label class="bt" for="gender">Gender</label>-->
+                    <!--                        <div class="gender" id="gender">-->
+                    <!--                            <div class="gender-type">-->
+                    <!--                                <input checked id="male" name="gender" type="radio" value="m"/>-->
+                    <!--                                <label for="male">-->
+                    <!--                                    <i class="uil uil-mars"></i>-->
+                    <!--                                    <p>male</p>-->
+                    <!--                                </label>-->
+                    <!--                            </div>-->
+                    <!--                            <div class="gender-type">-->
+                    <!--                                <input id="female" id="female" name="gender" type="radio" value="f"/>-->
+                    <!--                                <label for="female">-->
+                    <!--                                    <i class="uil uil-venus"></i>-->
+                    <!--                                    <p>Female</p>-->
+                    <!--                                </label>-->
+                    <!--                            </div>-->
+                    <!--                        </div>-->
+                    <!--                    </div>-->
                     <div class="btns">
                         <button class="btn btn-primary" type="submit">Save edits</button>
                         <button class="btn btn-primary" onclick="closeModalInfo()" type="button">Cancel edits</button>
