--- a/booking.html
+++ b/booking.html
@@ -9,6 +9,7 @@
     <link href="assets/css/form.min.css" rel="stylesheet"/>
     <link href="assets/css/booking.min.css" rel="stylesheet"/>
     <link href="assets/css/buss.min.css" rel="stylesheet"/>
+    <link href="assets/swal/sweetalert2.min.css" rel="stylesheet"/>
     <link href="/assets/fileupload/font/font-fileuploader.css" rel="stylesheet">
     <link href="/assets/fileupload/jquery.fileuploader.min.css" media="all" rel="stylesheet">
 
@@ -531,13 +532,13 @@
     </div>
 </footer>
 
+<script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/app.min.js"></script>
 <script src="assets/js/booking.min.js"></script>
-<script src="assets/js/jquery.min.js"></script>
-<link href="assets/fileupload/jquery.fileuploader.min.css" media="all" rel="stylesheet">
 <script src="assets/js/loadingoverlay.min.js"></script>
 <script src="assets/js/lodash.min.js"></script>
-<script src="assets/swal/sweetalert2.all.js"></script>
+<script src="assets/swal/sweetalert2.min.js"></script>
+<script src="assets/js/moment.min.js"></script>
 <script src="assets/js/main.min.js"></script>
 <script>
     $(document).ready(() => {
