--- a/user-admin.html
+++ b/user-admin.html
@@ -161,6 +161,7 @@
 <script src="assets/js/app.min.js"></script>
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/table.min.js"></script>
+<script src="assets/js/moment.min.js"></script>
 <script src="assets/js/main.min.js"></script>
 
 <script>
