--- a/booking.html
+++ b/booking.html
@@ -2,16 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <!-- link css -->
-    <link href="assets/css/style.css" rel="stylesheet"/>
-    <link href="assets/css/form.min.css" rel="stylesheet"/>
-    <link href="assets/css/booking.min.css" rel="stylesheet"/>
-    <link href="assets/css/buss.min.css" rel="stylesheet"/>
-    <link href="assets/swal/sweetalert2.min.css" rel="stylesheet"/>
-    <link href="/assets/fileupload/font/font-fileuploader.css" rel="stylesheet">
-    <link href="/assets/fileupload/jquery.fileuploader.min.css" media="all" rel="stylesheet">
+    <link href="assets/css/style.min.css?v=10" rel="stylesheet"/>
+    <link href="assets/css/form.min.css?v=10" rel="stylesheet"/>
+    <link href="assets/css/booking.min.css?v=10" rel="stylesheet"/>
+    <link href="assets/css/buss.min.css?v=10" rel="stylesheet"/>
+    <link href="assets/swal/sweetalert2.min.css?v=10" rel="stylesheet"/>
 
     <!-- unicons -->
     <link
@@ -532,19 +529,19 @@
     </div>
 </footer>
 
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/app.min.js"></script>
-<script src="assets/js/booking.min.js"></script>
-<script src="assets/js/loadingoverlay.min.js"></script>
-<script src="assets/js/lodash.min.js"></script>
-<script src="assets/swal/sweetalert2.min.js"></script>
-<script src="assets/js/moment.min.js"></script>
-<script src="assets/js/main.min.js"></script>
+<script rel="script" src="assets/js/jquery.min.js?v=10"></script>
+<script rel="script" src="assets/js/app.min.js?v=10"></script>
+<script rel="script" src="assets/js/booking.min.js?v=10"></script>
+<script rel="script" src="assets/js/loadingoverlay.min.js?v=10"></script>
+<script rel="script" src="assets/js/lodash.min.js?v=10"></script>
+<script rel="script" src="assets/swal/sweetalert2.min.js?v=10"></script>
+<script rel="script" src="assets/js/moment.min.js?v=10"></script>
+<script rel="script" src="assets/js/main.min.js?v=10"></script>
 <script>
-    $(document).ready(() => {
-        getSchedules();
-        localStorage.removeItem('selected-sched');
-    });
+    // $(document).ready(() => {
+    //     // getSchedules();
+    //     // localStorage.removeItem('selected-sched');
+    // });
 
     $("#chkReturn").change(function () {
         if (this.checked) {
