--- a/signup.html
+++ b/signup.html
@@ -6,8 +6,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <!-- link css -->
     <link href="assets/css/style.css" rel="stylesheet"/>
-    <link href="assets/css/form.min.css" rel="stylesheet"/>
-    <link href="assets/swal/sweetalert2.min.css" rel="stylesheet"/>
+    <link href="assets/css/form.min.css?v=10" rel="stylesheet"/>
+    <link href="assets/swal/sweetalert2.min.css?v=10" rel="stylesheet"/>
 
     <!-- unicons -->
     <link
@@ -147,9 +147,9 @@
         </center>
     </div>
 </footer>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-<script src="assets/js/app.min.js"></script>
-<script src="assets/swal/sweetalert2.min.js"></script>
+<script rel="script" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js?v=10"></script>
+<script rel="script" src="assets/js/app.min.js?v=10"></script>
+<script rel="script" src="assets/swal/sweetalert2.min.js?v=10"></script>
 <script>
     document.addEventListener("DOMContentLoaded", () => {
         let token = localStorage.getItem('TOKEN');
