--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <!-- link css -->
-    <link href="assets/css/style.css" rel="stylesheet"/>
-    <link href="assets/css/form.min.css" rel="stylesheet"/>
+    <link href="assets/css/style.min.css?v=10" rel="stylesheet"/>
+    <link href="assets/css/form.min.css?v=10" rel="stylesheet"/>
     <title>IWantSeats</title>
     <link href="assets/images/logo.png" rel="icon" sizes="185x191" type="image/png">
 
@@ -437,15 +437,15 @@
         </center>
     </div>
 </footer>
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/swal/sweetalert2.all.js"></script>
-<script src="assets/js/loadingoverlay.min.js"></script>
-<script src="assets/js/lodash.min.js"></script>
-<script src="assets/js/main.min.js"></script>
-<script src="assets/js/app.min.js"></script>
+<script rel="script" src="assets/js/jquery.min.js?v=10"></script>
+<script rel="script" src="assets/swal/sweetalert2.min.js?v=10"></script>
+<script rel="script" src="assets/js/loadingoverlay.min.js?v=10"></script>
+<script rel="script" src="assets/js/lodash.min.js?v=10"></script>
+<script rel="script" src="assets/js/main.min.js?v=10"></script>
+<script rel="script" src="assets/js/app.min.js?v=10"></script>
 <script>
     $(document).ready(() => {
-        getLocation();
+        // getLocation();
     })
 
     $("#chkReturn").change(function () {
