--- a/joybus.html
+++ b/joybus.html
@@ -6,8 +6,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <!-- link css -->
     <link href="assets/css/style.css" rel="stylesheet"/>
-    <link href="assets/css/oparator.min.css" rel="stylesheet"/>
-    <link href="assets/css/table.min.css" rel="stylesheet"/>
+    <link href="assets/css/oparator.min.css?v=10" rel="stylesheet"/>
+    <link href="assets/css/table.min.css?v=10" rel="stylesheet"/>
 
     <!-- unicons -->
     <link
@@ -290,6 +290,6 @@
     </div>
 </footer>
 
-<script src="assets/js/app.min.js"></script>
+<script src="assets/js/app.min.js?v=10"></script>
 </body>
 </html>
