--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <!-- link css -->
     <link href="assets/css/style.css" rel="stylesheet"/>
-    <link href="assets/css/form.min.css" rel="stylesheet"/>
+    <link href="assets/css/form.min.css?v=10" rel="stylesheet"/>
     <title>IWantSeats</title>
     <link href="assets/images/logo.png" rel="icon" sizes="185x191" type="image/png">
     <!-- unicons -->
@@ -86,9 +86,9 @@
         </center>
     </div>
 </footer>
-<script src="assets/js/app.min.js"></script>
-<script src="assets/swal/sweetalert2.all.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+<script rel="script" src="assets/js/app.min.js?v=10"></script>
+<script rel="script" src="assets/swal/sweetalert2.all.js"></script>
+<script rel="script" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js?v=10"></script>
 <script>
     document.addEventListener("DOMContentLoaded", () => {
         let token = localStorage.getItem('TOKEN');
