--- a/user-admin.html
+++ b/user-admin.html
@@ -6,8 +6,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <!-- link css -->
     <link href="assets/css/style.css" rel="stylesheet"/>
-    <link href="assets/css/admin.min.css" rel="stylesheet"/>
-    <link href="assets/css/table.min.css" rel="stylesheet"/>
+    <link href="assets/css/admin.min.css?v=10" rel="stylesheet"/>
+    <link href="assets/css/table.min.css?v=10" rel="stylesheet"/>
 
     <!-- unicons -->
     <link
@@ -158,11 +158,11 @@
     </div>
 </footer>
 
-<script src="assets/js/app.min.js"></script>
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/table.min.js"></script>
-<script src="assets/js/moment.min.js"></script>
-<script src="assets/js/main.min.js"></script>
+<script rel="script" src="assets/js/app.min.js?v=10"></script>
+<script rel="script" src="assets/js/jquery.min.js?v=10"></script>
+<script rel="script" src="assets/js/table.min.js?v=10"></script>
+<script rel="script" src="assets/js/moment.min.js?v=10"></script>
+<script rel="script" src="assets/js/main.min.js?v=10"></script>
 
 <script>
 
