--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="assets/css/form.min.css?v=10" rel="stylesheet"/>
     <title>IWantSeats</title>
     <link href="assets/images/logo.png" rel="icon" sizes="185x191" type="image/png">
+    <link href="assets/swal/sweetalert2.min.css?v=10" rel="stylesheet"/>
 
     <!-- unicons -->
     <link
