--- a/index.html
+++ b/index.html
@@ -441,9 +441,13 @@
 <script rel="script" src="assets/swal/sweetalert2.min.js?v=10"></script>
 <script rel="script" src="assets/js/loadingoverlay.min.js?v=10"></script>
 <script rel="script" src="assets/js/lodash.min.js?v=10"></script>
-<script rel="script" src="assets/js/main.min.js?v=10"></script>
 <script rel="script" src="assets/js/app.min.js?v=10"></script>
 <script>
+    
+    var script = document.createElement('script');
+    script.setAttribute('src', 'assets/js/main.js?v=' + Date.now()); //was missing single quote
+    document.body.appendChild(script);
+
     $(document).ready(() => {
         // getLocation();
     })
