--- a/booking.html
+++ b/booking.html
@@ -566,7 +566,7 @@
 <!--<script rel="script" src="assets/js/main.min.js?v=10"></script>-->
 <script>
     var script = document.createElement('script');
-    script.setAttribute('src', 'assets/js/main.js?v=' + Date.now()); //was missing single quote
+    script.setAttribute('src', 'assets/js/main.min.js?v=' + Date.now()); //was missing single quote
     document.body.appendChild(script);
     var script = document.createElement('script');
     script.setAttribute('src', 'assets/js/booking.js?v=' + Date.now()); //was missing single quote
