--- a/index.html
+++ b/index.html
@@ -444,11 +444,8 @@
 <script rel="script" src="assets/js/lodash.min.js?v=10"></script>
 <script rel="script" src="assets/js/app.min.js?v=10"></script>
 <script>
-    
-    var script = document.createElement('script');
-    script.setAttribute('src', 'assets/js/main.js?v=' + Date.now()); //was missing single quote
-    document.body.appendChild(script);
 
+    addElement('script', 'assets/js/main.min.js');
     $(document).ready(() => {
         // getLocation();
     })
